versions/0.5.1/README.md
# Nova Programming Language - Version 0.5.1

Nova is a modern, high-performance programming language designed for simplicity and efficiency.

## Features

- Clean, Python-like syntax
- Strong type system
- Virtual machine with JIT compilation
- Standard library with basic modules
- Version management system

## What's New in 0.5.1

### Bug Fixes
- Parser error when handling complex expressions in struct methods
- Class system parameter count checking
- Minor bug fixes in virtual machine

### Improvements
- Optimized parser performance
- Improved error messages
- Enhanced semantic analysis for type checking

## Installation

```bash
# From source
python setup.py install

# Using script.py
python script.py install --version=0.5.1
```

## Usage

```bash
# Run Nova REPL
nova

# Run Nova script
nova script.nova
```

## Documentation

For more information, please refer to the official documentation.